--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <header>
         <h1>The Woven Realms</h1>
     </header>
+    <nav>
+        <a href="index.html" class="realm-button">Home</a>
+        <a href="sky-islands.html" class="realm-button" data-realm="sky">Sky Islands</a>
+        <a href="jade-empire.html" class="realm-button" data-realm="jade">Jade Empire</a>
+        <a href="frost-reaches.html" class="realm-button" data-realm="frost">Frost Reaches</a>
+    </nav>
     <main>
         <section id="core-concept" class="realm-section">
             <h2>Core Concept</h2>
